--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
     "hardhat": "^2.2.1"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.1.0",
+    "azimuth-solidity": "^1.2.2"
   }
 }
