--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/test-environment": "^0.1.9",
+    "@openzeppelin/test-helpers": "^0.5.11",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
-    "hardhat": "^2.2.1"
+    "hardhat": "^2.2.1",
+    "web3": "^1.3.6"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.1.0",
-    "azimuth-solidity": "github:urbit/azimuth"
+    "openzeppelin-solidity": "^1.12.0"
   }
 }
