--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
     "hardhat": "^2.2.1",
+    "mocha": "^7.2.0",
+    "truffle": "^5.3.6",
     "web3": "^1.3.6"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.1.0",
-    "openzeppelin-solidity": "^1.12.0",
-    "truffle": "^5.3.6"
+    "openzeppelin-solidity": "^1.12.0"
   }
 }
