--- a/package.json
+++ b/package.json
@@ -17,5 +17,18 @@
     "@openzeppelin/contracts": "^4.1.0",
     "azimuth-solidity": "^1.2.2",
     "openzeppelin-solidity": "^1.12.0"
+  },
+  "scripts": {
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ransonhobbes/stardust.git"
+  },
+  "author": "Ranson Hobbes <ransonhobbes@protonmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/ransonhobbes/stardust/issues"
   }
 }
