--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         node-version: [12.x, 14.x]
         # node-version: [12.x, 14.x, 16.x]
+        # node 16.x doesn't work, see https://github.com/ransonhobbes/stardust/issues/12
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
