--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "web3": "^1.3.6"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^1.2.0",
     "@openzeppelin/contracts": "^4.1.0",
+    "azimuth-js": "^0.22.1",
     "azimuth-solidity": "^1.2.2",
     "openzeppelin-solidity": "^1.12.0",
     "react": "^17.0.2",
