--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.1.0",
+    "azimuth-js": "^0.22.1",
     "azimuth-solidity": "^1.2.2",
     "openzeppelin-solidity": "^1.12.0"
   },
