--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.1.4",
     "hardhat": "^2.2.1",
+    "hardhat-deploy": "^0.9.4",
+    "hardhat-deploy-ethers": "^0.3.0-beta.11",
     "mocha": "^7.2.0",
     "web3": "^1.3.6"
   },
