--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,9 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    #strategy:
-      #matrix:
-        #node-version: [12.x, 14.x, 16.x]
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x]
     steps:
     - uses: actions/checkout@v2
       with:
@@ -21,12 +21,12 @@ jobs:
       run: >
         git config --global url."https://github.com/".insteadOf
         ssh://git@github.com/
-    #- name: Use Node.js ${{ matrix.node-version }}
-    - name: Use Node.js 16.x
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
-        node-version: 16.x
-        #node-version: ${{ matrix.node-version }}
+        node-version: ${{ matrix.node-version }}
+    - name: Upgrade npm
+      run: npm install -g npm
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
